--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="container">
         <h1>Здравствуйте!</h1>
         <p>Я Александр Атрохов, начинающий Frontend-разработчик.</p>
-        <p>В данный момент заканчиваю обучение на платформе <a href="https://netology.ru/" target="_blank">Нетология</a>.</p>
+        <p>Закончил обучение на платформе
+            <a href="https://netology.ru/" target="_blank">Нетология</a> в 2025г., курс
+            <a href="https://netology.ru/programs/veb-razrabotchik-s-nulya-professiya-s-vyborom-specializacii" target="_blank">"Веб-разработчик с нуля".</a>
+        </p>
         <hr>
         <h2><i class="fas fa-envelope"></i> Контакты:</h2>
         <div class="socials">
@@ -34,6 +37,7 @@
         <hr>
         <h2><i class="fas fa-folder-open"></i> Примеры работ:</h2>
         <ul>
+            <li><a href="https://github.com/Cen-2-rion/booking-cinema-tickets?tab=readme-ov-file#%D0%B7%D0%B0%D0%BF%D1%83%D1%81%D0%BA-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B0">Дипломный проект по профессии «Веб-разработчик»</a></li>
             <li><a href="https://codepen.io/al_der">HTML & CSS</a></li>
             <li><a href="https://github.com/Cen-2-rion/bjs-2-homeworks">Основы Javascript</a></li>
             <li><a href="https://github.com/Cen-2-rion/bhj-homeworks">Базовый JavaScript в браузере</a></li>
@@ -41,19 +45,25 @@
             <li><a href="https://github.com/Cen-2-rion/ahj-homeworks">Продвинутый JavaScript в браузере</a></li>
             <li><a href="https://github.com/Cen-2-rion/ra-homeworks">React</a></li>
             <li><a href="https://github.com/Cen-2-rion/bphp-2-homeworks">Основы PHP</a></li>
+            <li><a href="https://github.com/Cen-2-rion/aphp-homeworks">Продвинутый PHP</a></li>
+            <li><a href="https://github.com/Cen-2-rion/lrvl-homeworks">Фреймворк Laravel</a></li>
         </ul>
         <hr>
         <h2><i class="fas fa-certificate"></i> Сертификаты:</h2>
         <ul>
+            <li><a href="certificate/Full.pdf">Веб-разработчик с нуля</a></li>
             <li><a href="certificate/HTML.pdf">HTML-верстка</a></li>
+            <li><a href="certificate/MQ.pdf">Адаптивная и мобильная верстка</a></li>
             <li><a href="certificate/BoP.pdf">Основы программирования</a></li>
             <li><a href="certificate/Git.pdf">Git</a></li>
             <li><a href="certificate/BJS.pdf">Основы JavaScript</a></li>
-            <li><a href="certificate/BHJ.pdf">JavaScript в браузере</a></li>
             <li><a href="certificate/AJS.pdf">Продвинутый JavaScript</a></li>
+            <li><a href="certificate/BHJ.pdf">JavaScript в браузере</a></li>
             <li><a href="certificate/AHJ.pdf">Продвинутый JS в браузере</a></li>
             <li><a href="certificate/React.pdf">React</a></li>
             <li><a href="certificate/BPHP.pdf">Основы PHP</a></li>
+            <li><a href="certificate/APHP.pdf">Продвинутый PHP</a></li>
+            <li><a href="certificate/LRVL.pdf">Фреймворк Laravel</a></li>
         </ul>
     </div>
 </body>
