--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
             <img src="skills/html.png" alt="HTML">
             <img src="skills/js.png" alt="JavaScript">
             <img src="skills/ts.png" alt="TypeScript">
-            <img src="skills/npm.png" alt="NPM">
+            <img src="skills/npm.png" alt="Npm">
+            <img src="skills/yarn.png" alt="Yarn">
+            <img src="skills/webpack.png" alt="Webpack">
             <img src="skills/react.png" alt="React">
             <img src="skills/php.png" alt="PHP">
+            <img src="skills/lrvl.png" alt="Laravel">
         </div>
         <hr>
         <h2><i class="fas fa-folder-open"></i> Примеры работ:</h2>
